--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "meteor-node-stubs": "^0.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-flip-move": "^3.0.3"
   },
   "devDependencies": {
     "react-autocomplete-cli": "0.0.3"
